Changed all 'Stream.collect(Collectors.toList())' to 'Stream.toList()'